k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microapp
  labels:
    app.kubernetes.io/name: microapp
